--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -47,7 +47,7 @@ body * {
   --error-light-text: #bf2600;
   --success-icon-background: #36b37e;
   --success-light-text: #006644;
-  --nav-background: #092e67;
+  --nav-background: #1f447c;
   --nav-border-sep: #21376c;
   --nav-hover-link-color: #ffe08c;
   --nav-link-hover-background: #95bcf721;
@@ -95,7 +95,7 @@ body * {
   --error-light-text: #fff;
   --success-icon-background: #004b2b;
   --success-light-text: #fff;
-  --nav-background: #05224d;
+  --nav-background: #1c3c6d;
   --nav-border-sep: #21376c;
   --nav-hover-link-color: #ffe08c;
   --nav-link-hover-background: #95bcf721;
