--- a/web-frontend/src/pages/exkey/exkey.css
+++ b/web-frontend/src/pages/exkey/exkey.css
@@ -243,18 +243,17 @@
 .analyze_again {
   display: grid;
   flex-wrap: wrap;
-  margin-top: 26%;
-  margin-left: 60%;
+  margin-top: -6%;
+  margin-left: 120%;
   animation-name: wobble;
   -webkit-animation-duration: 0.8s;
   animation-duration: 2.3s;
-  position: absolute;
   width: 10vw;
 }
 
 @media only screen and (max-width: 1000px) {
   .analyze_again {
-    margin-top: 250px;
+    margin-top: -10%;
     margin-left: 0px;
   }
 }
@@ -322,17 +321,23 @@
 }
 
 .loader_progress {
-  position: absolute;
-  top: 50%;
-  left: 48%;
+  top: -350px;
+  left: -60px;
 }
+/* 
+@media only screen and (max-width: 1500px) {
+  .loader_progress {
+    margin-right: -140px;
+    top: -100px;
+  }
+} */
 
 .line_loader {
   display: flex;
   flex-wrap: wrap;
   position: absolute;
-  right: -150px;
-  bottom: -170px;
+  right: 45%;
+  top: 60%;
 }
 
 .line_progress {
@@ -340,15 +345,15 @@
   border-radius: 10px;
   display: inline-block;
   transform-origin: center center;
-  margin: 0 5px;
-  width: 2px;
-  height: 15px;
+  margin: 0 8px;
+  width: 6px;
+  height: 35px;
 }
 
 @media only screen and (max-width: 1500px) {
   .line_loader {
-    margin-right: 560px;
-    top: 270px;
+    margin-right: -10px;
+    margin-top: -50px;
   }
 }
 
@@ -382,18 +387,19 @@
 
 .loader_description {
   display: grid;
-  margin-top: 100px;
-  margin-left: -80px;
+  margin-top: -20%;
+  margin-left: -23%;
   font-size: 1.8rem;
   font-weight: bold;
   font-family: Bradley Hand, cursive;
-  border-right: 2px solid rgba(255, 255, 255, 0.75);
+  /* border-right: 2px solid rgba(255, 255, 255, 0.75); */
   overflow: hidden;
   white-space: nowrap;
 }
 @media only screen and (max-width: 500px) {
   .loader_description {
-    margin-left: -130px;
+    margin-left: 20px;
+    margin-top: -80%;
   }
 }
 
@@ -402,7 +408,7 @@
     width: 0;
   }
   to {
-    width: 49%;
+    width: 100%;
   }
 }
 
