--- a/web-frontend/src/components/nav/nav.css
+++ b/web-frontend/src/components/nav/nav.css
@@ -139,7 +139,7 @@ img.dropdown-arrow {
   background-color: var(--nav-background);
   transition: width 200ms ease;
   top: 0;
-  z-index: 999;
+  z-index: 9999;
   /* cursor: pointer; */
 }
 .navbar-nav {
@@ -154,6 +154,7 @@ img.dropdown-arrow {
 
 .parent-link {
   position: relative;
+  margin-bottom: -1.5px;
 }
 .navbar-sub-nav {
   /* display: none; */
@@ -352,4 +353,77 @@ img.dropdown-arrow {
 @media only screen and (min-width: 600px) {
 }
 @media only screen and (max-width: 600px) {
+}
+.navbar:hover .nav-propic {
+  width: 3.2rem;
+  height: 3.2rem;
+  transition: 200ms ease;
+}
+.nav-propic {
+  width: 2.4rem;
+  height: 2.4rem;
+  border-radius: 50%;
+}
+.nav-user-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+  transition: height 750ms ease;
+}
+.nav-propic-wrapper {
+  background: #0000001a;
+  border: 0.5px solid #17325a;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav-profile-wrapper {
+  padding-bottom: 0px;
+  padding-top: 0px;
+  transition: 300ms ease;
+  background: #214273;
+}
+.nav-user-det {
+  width: 0;
+  overflow: hidden;
+  opacity: 0;
+  margin-left: 0;
+  display: flex;
+  padding-left: 0;
+  border-left: 1px solid #173766;
+  flex-direction: column;
+  transform: translateX(-13px);
+}
+.nav-username {
+  font-size: 2.1rem;
+  font-weight: 300;
+}
+.nav-user-logout {
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: var(--primary-accent);
+}
+.navbar:hover .nav-propic-wrapper {
+  padding: 6px;
+}
+.navbar:hover .nav-profile-wrapper {
+  background: #214273;
+  padding-bottom: 10px;
+  padding-top: 15px;
+}
+.navbar:hover .nav-user-det {
+  padding-left: 14px;
+  margin-left: 14px;
+  width: auto;
+  /* overflow: hidden; */
+  opacity: 1;
+  transform: translateX(0);
+  transition: 350ms ease;
+}
+.navbar:hover .nav-user-wrapper {
+  background: transparent;
+  border: 0.5px solid transparent;
+  border-radius: 0;
 }
