--- a/web-frontend/src/components/nav/nav.css
+++ b/web-frontend/src/components/nav/nav.css
@@ -363,6 +363,7 @@ img.dropdown-arrow {
   width: 2.4rem;
   height: 2.4rem;
   border-radius: 50%;
+  transition: 200ms ease;
 }
 .nav-user-wrapper {
   display: flex;
@@ -378,12 +379,42 @@ img.dropdown-arrow {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 200ms ease;
 }
 .nav-profile-wrapper {
-  padding-bottom: 0px;
-  padding-top: 0px;
-  transition: 300ms ease;
   background: #214273;
+  padding-top: 0;
+  padding-bottom: 0;
+  transition: 300ms ease;
+  animation: nav-user-reveal 400ms ease forwards;
+}
+@keyframes nav-user-reveal {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+.nav-profile-hidden {
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+  /* height: 0 !important; */
+  overflow: hidden;
+  transition: 300ms ease;
+  animation: nav-user-conceal 400ms ease forwards;
+}
+@keyframes nav-user-conceal {
+  from {
+    /* max-height: auto !important; */
+    transform: scale(1);
+  }
+  to {
+    /* max-height: 0 !important; */
+    height: 0;
+    opacity: 0;
+    transform: scale(0);
+  }
 }
 .nav-user-det {
   width: 0;
@@ -412,6 +443,7 @@ img.dropdown-arrow {
   background: #214273;
   padding-bottom: 10px;
   padding-top: 15px;
+  height: auto;
 }
 .navbar:hover .nav-user-det {
   padding-left: 14px;
