--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -250,6 +250,12 @@ h6 {
   color: var(--primary-black);
 }
 /* Texts */
+.fancy-heading {
+  font-size: 3rem;
+  font-weight: 500;
+  /* margin-bottom: 2px; */
+  color: var(--fancy-heading-color);
+}
 .heading1 {
   font-weight: 600;
   font-size: 2.8rem;
