--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -27,6 +27,7 @@ body * {
   --black: rgba(0, 0, 0, 1);
   --primary-black: rgba(68, 68, 68, 1);
   --secondary-black: rgba(68, 68, 68, 1);
+  --grey-black: rgb(99, 99, 99);
   --primary-accent: rgba(241, 145, 0, 1);
   --primary-accent-light: rgba(255, 160, 38, 1);
   --primary-accent-dark: rgba(241, 145, 0, 1);
@@ -45,7 +46,9 @@ body * {
   --gap-medium: 25px;
 
   /* dark-mode exceptions */
-  --info-focus-card-background: #e8faff;
+  --current-location-background: #ddf4ff53;
+  --current-location-border-color: #95dcff;
+  --info-focus-card-background: #fafafa;
   --info-focus-card-border-color: #71ddff;
   --heading2-sep-grey: rgb(200, 200, 200);
   --error-icon-background: #ff5630;
@@ -91,6 +94,7 @@ body * {
   --black: rgba(250, 250, 250, 1);
   --primary-black: rgb(205 205 205);
   --secondary-black: rgba(190, 190, 190, 1);
+  --grey-black: rgb(199, 199, 199);
   --primary-accent: rgb(206 129 15);
   --primary-accent-light: rgb(159 96 2);
   --primary-accent-dark: rgba(241, 145, 0, 1);
@@ -100,8 +104,10 @@ body * {
   --grey: rgb(198 198 198);
   --primary-border-grey: rgba(69, 69, 69, 1);
   /* dark-mode exceptions */
-  --info-focus-card-background: #0c7482;
-  --info-focus-card-border-color: #1f4854;
+  --current-location-background: #003b5753;
+  --current-location-border-color: #003853;
+  --info-focus-card-background: #222;
+  --info-focus-card-border-color: #076682;
   --heading2-sep-grey: rgb(59, 59, 59);
   --error-icon-background: #7f1700;
   --error-light-text: #fff;
