--- a/web-frontend/src/components/analytics/analytics.css
+++ b/web-frontend/src/components/analytics/analytics.css
@@ -39,11 +39,13 @@ div.neg-pos-graph > *:nth-last-child(1) {
   margin-right: 0;
 }
 div.sentiment-rank-card {
-  padding: 30px 50px;
+  box-sizing: border-box;
+  padding: 20px 40px;
   display: flex;
   border-radius: 8px;
-  max-width: 500px;
-  min-width: 350px;
+  max-width: 400px;
+  min-width: 150px;
+  height: 100%;
   /* width: 100%; */
 }
 div.sentiment-rank-card--pos {
@@ -65,11 +67,11 @@ span.sentiment-det-description {
 }
 h1.sentiment-det-label {
   margin-bottom: 5px;
-  font-size: 2.4rem;
+  font-size: 2.2rem;
 }
 h1.sentiment-det-polarity-perc {
-  margin-top: 30px;
-  font-size: 3.6rem;
+  margin-top: 20px;
+  font-size: 3rem;
 }
 div.sentiment-emoji {
   display: flex;
@@ -81,8 +83,36 @@ div.sentiment-emoji {
 }
 div.sentiment-emoji img {
   /* width: 50%; */
-  max-width: 55px;
+  max-width: 35px;
   /* min-width: 100px; */
   opacity: 0.8;
   /* object-fit: contain; */
+}
+@media only screen and (max-width: 1100px) {
+  div.sentiment-emoji {
+    width: 0;
+    opacity: 0;
+    visibility: hidden;
+  }
+  div.sentiment-emoji img {
+    width: 0;
+  }
+  div.sentiment-rank-card {
+    padding: 15px 20px;
+    /* max-width: 250px; */
+    /* min-width: 250px; */
+    box-sizing: border-box;
+  }
+  span.sentiment-det-description {
+    font-size: 1.2rem;
+    /* white-space: nowrap; */
+  }
+  h1.sentiment-det-label {
+    margin-bottom: 5px;
+    font-size: 2.2rem;
+  }
+  h1.sentiment-det-polarity-perc {
+    margin-top: 20px;
+    font-size: 3.2rem;
+  }
 }
