--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -37,9 +37,11 @@ body * {
   --lighter-grey: rgb(235, 235, 235);
   --grey: rgba(146, 146, 146, 1);
   --primary-border-grey: rgba(159, 159, 159, 1);
+  --primary-border-grey: rgba(188, 188, 188, 1);
 
   /* Effect styles */
-  --primary-box-shadow: 22px 0px 4px rgba(0, 0, 0, 0.12);
+  /* --primary-box-shadow: 22px 0px 4px rgba(0, 0, 0, 0.12); */
+  --primary-box-shadow: 0px 0px 22px rgba(0, 0, 0, 0.12);
   --primary-border: 1px solid var(--primary-border-grey);
 
   /* gaps */
@@ -125,7 +127,7 @@ body * {
   --analytics-card: rgb(34 36 40);
   --fancy-heading-color: rgb(193 208 230);
   --input-box-background: rgba(69, 69, 69, 1);
-  --primary-box-shadow: 22px 0px 4px rgba(0, 0, 0, 0.12);
+  --primary-box-shadow: 0px 0px 22px rgba(0, 0, 0, 0.12);
   --primary-border: 1px solid var(--primary-border-grey);
   --select-box-alt-color: rgba(39, 39, 39, 1);
 
