--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -254,6 +254,7 @@ div.card {
   border: 1px solid var(--primary-border-grey);
   border-radius: 6px;
   background-color: var(--analytics-card);
+  /* box-shadow: var(--primary-box-shadow); */
 }
 h1,
 h2,
@@ -699,7 +700,7 @@ button.signup-btn {
 .react-toast-notifications__container {
   /* margin-top: 5px !important; */
   width: 100% !important;
-  padding-left: 4.7rem !important;
+  padding-left: var(--nav-width) !important;
   padding-right: 2px !important;
   padding-top: 0px !important;
   padding-bottom: 0px !important;
