--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -815,6 +815,8 @@ button.signup-btn {
 /* back link */
 .link-back {
 }
+
+/*URAS*/
 /* sentiment rank card container */
 .sentiment-rank-card-container {
   min-width: 280px;
@@ -828,6 +830,18 @@ button.signup-btn {
 .overall-sentiment-results-card-container {
   width: clamp(30rem, 65vw, 40rem);
   margin-right: 30px;
+}
+
+.uras-sort-label {
+  font-size: 1.6rem;
+  color: var(--grey);
+  font-weight: 300;
+}
+select.uras-sort {
+  font-size: 1.4rem;
+  margin: 10px;
+  width: fit-content;
+  color: var(--grey-black);
 }
 @media only screen and (max-width: 1500px) {
   .content-padding {
