--- a/web-frontend/src/pages/login/login.css
+++ b/web-frontend/src/pages/login/login.css
@@ -13,11 +13,19 @@
   /* width: 30%; */
   /* border-radius: 5px; */
 }
+.login-page-container > div {
+  margin: auto;
+}
 .login-page-container {
-  margin-left: 6%;
+  margin-left: 5%;
 }
 .login-page-container > div:first-child {
   /* margin-right: 80px; */
+  margin-right: 0;
+}
+.login-page-container > div:last-child {
+  /* margin-right: 80px; */
+  margin-left: 0;
 }
 .login-title,
 .login-moto {
@@ -30,7 +38,7 @@
 .login-card {
   padding: 40px 50px;
   width: 30%;
-  max-width: 400px;
+  max-width: 600px;
 }
 .login-header {
 }
@@ -100,6 +108,7 @@ input.error-input {
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* padding-right: 0; */
   /* margin-left: 20%; */
 }
 .login-banner {
@@ -114,12 +123,19 @@ input.error-input {
   width: 80%;
   min-width: 300px;
 }
+@media only screen and (max-height: 750px) {
+  .login-page-container {
+    padding-bottom: 150px !important;
+    padding-top: 70px !important;
+  }
+}
 @media only screen and (max-width: 1000px) {
   .login-banner-wrapper-container {
     display: none;
   }
   .login-card {
-    width: 70%;
+    width: 100%;
+    margin-right: auto !important;
   }
   .login-page-container {
     padding: 0px 40px;
