--- a/web-frontend/src/components/nav/nav.css
+++ b/web-frontend/src/components/nav/nav.css
@@ -436,6 +436,11 @@ img.dropdown-arrow {
   font-size: 2.1rem;
   font-weight: 300;
 }
+.nav-user-logout-btn {
+  /* font-weight: 400; */
+  cursor: pointer;
+}
+
 .nav-user-logout {
   font-size: 1.6rem;
   font-weight: 500;
@@ -463,4 +468,7 @@ img.dropdown-arrow {
   background: transparent;
   border: 0.5px solid transparent;
   border-radius: 0;
+}
+button.logout-modal-button {
+  width: 50%;
 }
