--- a/web-frontend/src/pages/index/homepage.css
+++ b/web-frontend/src/pages/index/homepage.css
@@ -106,7 +106,7 @@
   text-align: center;
 }
 
-.homepage-startbtnrow {
+.homepage-startbtnarow {
   font-size: 20px;
   margin-right: 5px;
   width: 20px;
