--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -171,6 +171,9 @@
   margin-right: 0;
   margin-left: 0;
 }
+.-margin-center {
+  margin: auto;
+}
 .-flex {
   display: flex;
 }
@@ -493,6 +496,15 @@ button.icon-button {
   border-radius: 50%;
   -webkit-animation: spinner-border 0.75s linear infinite;
   animation: spinner-border 0.75s linear infinite;
+}
+.spinner-large {
+  width: 8rem;
+  height: 8rem;
+  border-width: 9px;
+}
+.spinner-accent {
+  border-color: var(--primary-accent);
+  border-right-color: transparent;
 }
 .spinner-small {
   width: 2rem;
