--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -423,7 +423,7 @@ button.primary-btn:disabled {
   opacity: 0.75;
 }
 button.primary-btn:hover:enabled {
-  transform: translateY(1px);
+  /* transform: translateY(1px); */
   background: var(--primary-accent-light);
   border: 2px solid var(--primary-accent-light);
 }
@@ -438,8 +438,11 @@ button.primary-btn-outline {
   background: transparent;
   /* border: 2px solid var(--primary-accent); */
 }
+button.primary-btn-outline:disabled:hover {
+  color: var(--primary-accent);
+}
 button.primary-btn-outline:hover {
-  color: var(--primary-white);
+  color: #fff;
   /* background: var(--dark-purple); */
   /* border: 2px solid var(--dark-purple); */
 }
