--- a/web-frontend/src/components/modal/modal.css
+++ b/web-frontend/src/components/modal/modal.css
@@ -13,7 +13,7 @@
 }
 
 .modal-main {
-  border: 3px solid rgb(0 0 0 / 7%);
+  border: 3px solid var(--modal-box-border);
   box-shadow: 0px 5px 5px #0000001a;
   /* position: fixed; */
   background: var(--white);
@@ -28,7 +28,9 @@
 }
 
 .modal-footer {
-  padding: 30px 0px;
+  padding: 20px 0px;
+  border-top: 1px solid var(--modal-box-footer-border);
+  margin-top: 30px;
 }
 .modal-footer > div > *:first-child {
   margin-right: 10px;
